# kata-bootstraps-gdcr20

./: .gitignore  .java-version  README.md
.github/workflows/: python.yml
csharp/dotnet-core/: notes.txt
csharp/dotnet-core/Kata/: HelloWorld.cs  Kata.csproj
csharp/dotnet-core/Kata.Tests/: HelloWorldTests.cs  Kata.Tests.csproj
csharp/dotnet-core5/Kata/: HelloWorld.cs
csharp/dotnet-core5/Kata.Tests/: HelloWorldTests.cs  README.md  TestList.md
csharp/dotnet6/DotnetStarter.Logic/: IDisplay.cs  VendingMachine.cs
csharp/dotnet6/DotnetStarter.Logic.Tests/: DisplayMock.cs  HelloWorldTest.cs  VendingMachineTest.cs
golang/ginkgo/: kata.go  kata_test.go
haskell/hspec/fizzbuzz/: package.yaml
java/: README.md
java/junit5/: build.gradle  pom.xml
java/spock/: pom.xml
js/jasmine-node/: HelloWorldSpec.js
js/jest-tests/: package-lock.json
kotlin/junit/: README.md
kotlin/junit5assertj/: build.gradle  settings.gradle
php/src/: Board.php  Grid.php  Position.php  README.md  Snake.php
php/tests/: BoardTest.php  CellTest.php  GridTest.php  MatrixTest.php  SnakeTest.php
python/pytest/: .gitignore  README.md  pyproject.toml  requirements.txt  rules.md
python/pytest/app/: game.py  game_of_life.py  vending_machine.py
python/pytest/tests/: test_double.py  test_game.py  test_thing.py  test_vending_machine.py
python/simple_pytest/: README.md  snake.py  test_snake.py
room2/: gameOfLife.sh
ts/typescript-jest/: package-lock.json  package.json  tsconfig.json  tslint.json
ts/typescript-jest-fast-check/: package-lock.json  package.json  tslint.json
(+91 files in other folders)
